[project]
name = "molliesim"
version = "0.0.1"
description = "Simulator of the Mollie API for testing purposes."
readme = "README.md"
authors = [
  {name="Vasco Visser", email="vasco@team-hub.eu"}
]
dependencies = [
  'pydantic ~= 1.9',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
]
requires-python = ">=3.5"

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"
