[metadata]
name = molliesim

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src


# [metadata]
# name = molliesim
# version = attr: molliesim.__version__
# description = Simulator of the Mollie API for testing purposes.
# long_description = file: README.rst
# long_description_content_type = text/x-rst
# license = BSD
# url = https://github.com/...
# author = Vasco Visser
# author_email = vasco@team-hub.eu
# maintainer = Vasco Visser
# maintainer_email = vasco@@team-hub.eu
# classifiers =
#     Development Status :: 3 - Alpha
#     License :: OSI Approved :: BSD License
#     Programming Language :: Python :: 3.5
#     Programming Language :: Python :: 3.6
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
# 
# [options]
# packages = molliesim
# 
# python_requires = >=3.5
